# crc-fast

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
bench/: adler32_benchmark.rs  crc16_benchmark.rs  crc32_benchmark.rs
