[package]
name = "crc-fast" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Michael Sowka <michael.sowka@happy-it.de>"]
repository = "https://github.com/opencompress/crc-fast.git"
homepage = "https://github.com/opencompress/crc-fast/"
readme = "README.md"
description = "Rust implementations of crc16 crc32 crc64 with their variants and machine optimizations"
keywords = ["crc", "crc16", "crc-16", "crc32", "crc32C", "crc-32", "checksum", "compression"]
edition = '2018'
license = "MIT/Apache-2.0"

[dev-dependencies]
criterion = "0.2"
crc = { git = "https://github.com/mrhooray/crc-rs" }
crc_all = { git = "https://github.com/nanpuyue/crc" }
crc_any = { git = "https://github.com/magiclen/crc-any" }
crc16 = { git = "https://github.com/blackbeam/rust-crc16" }
cdrom_crc = { git = "https://github.com/mistydemeo/cdrom_crc" }
rusty_crc = { git = "https://github.com/F3real/rusty_crc16" }
crc32fast = { git = "https://github.com/srijs/rust-crc32fast" }
crc32c-hw = { git = "https://github.com/maksimsco/crc32c-hw" }
rust-crc8 = { git = "https://github.com/mkopa/rust-crc8" }
adler32 = { git = "https://github.com/remram44/adler32-rs" }

[[bench]]
name = "crc16_benchmark"
harness = false
